@@ -298,7 +298,12 @@ static void Init
 	(
 	)
 	{
-	if (SDL_Init(SDL_INIT_VIDEO|SDL_INIT_TIMER|SDL_INIT_AUDIO) < 0)
+	Uint32 init_flags = SDL_INIT_VIDEO|SDL_INIT_TIMER|SDL_INIT_AUDIO;
+#ifdef NO_SDL_PARACHUTE
+	init_flags |= SDL_INIT_NOPARACHUTE;
+#endif
+
+	if (SDL_Init(init_flags) < 0)
 		{
 		cerr << "Unable to initialize SDL: " << SDL_GetError() << endl;
 		exit(-1);
